--- a/Elesov/ЕлесовКурсоваяработа414группа.md
+++ b/Elesov/ЕлесовКурсоваяработа414группа.md
@@ -498,8 +498,8 @@ class HotelManagementApp:
 Рисунок 1. Концептуальная модель
 ![Логическая модель]((https://github.com/ait-ester/subd-kursach-414/blob/main/Elesov/im/логика.png)
 Рисунок 2. Логическая модель
-![Рисунок 3. Главное окно. Вкладка "Бронирования"]((https://github.com/ait-ester/subd-kursach-414/blob/main/Elesov/im/прил.png)
-Рисунок 3. Главное окно. Вкладка "Бронирования"
+![Рисунок 3. Структура приложения]((https://github.com/ait-ester/subd-kursach-414/blob/main/Elesov/im/прил.png))
+Рисунок 3. Структура приложения
 ![Рисунок 4. Главное окно. Вкладка "Бронирования"](https://github.com/ait-ester/subd-kursach-414/blob/main/Elesov/im/gui1.png)
 Рисунок 4. Главное окно. Вкладка "Бронирования"
 ![Рисунок 5. Главное окно. Вкладка "Клиенты"](https://github.com/ait-ester/subd-kursach-414/blob/main/Elesov/im/gui2.png)
@@ -508,9 +508,9 @@ class HotelManagementApp:
 Рисунок 6. Главное окно. Вкладка "Номера"
 ![Рисунок 7. Главное окно. Вкладка "Уборка"](https://github.com/ait-ester/subd-kursach-414/blob/main/Elesov/im/gui4.png)
 Рисунок 7. Главное окно. Вкладка "Уборка"
-![Рисунок 8. Главное окно. Вкладка "Номера"](https://github.com/ait-ester/subd-kursach-414/blob/main/Elesov/im/gui5.png)
-Рисунок 8. Главное окно. Вкладка "Номера"
-![Рисунок 9. Главное окно. Вкладка "Уборка"](https://github.com/ait-ester/subd-kursach-414/blob/main/Elesov/im/gui6.png)
-Рисунок 9. Главное окно. Вкладка "Уборка"  
-![Рисунок 10. Главное окно. Пример диалогового окна]((https://github.com/ait-ester/subd-kursach-414/blob/main/Elesov/im/диалоговоеокно.png)
+![Рисунок 8. Главное окно. Вкладка "Работники"](https://github.com/ait-ester/subd-kursach-414/blob/main/Elesov/im/gui5.png)
+Рисунок 8. Главное окно. Вкладка "Работники"
+![Рисунок 9. Главное окно. Вкладка "Отчёты"](https://github.com/ait-ester/subd-kursach-414/blob/main/Elesov/im/gui6.png)
+Рисунок 9. Главное окно. Вкладка "Отчёты"  
+![Рисунок 10. Главное окно. Пример диалогового окна]((https://github.com/ait-ester/subd-kursach-414/blob/main/Elesov/im/диалоговоеокно.png))
 Рисунок 10. Главное окно. Пример диалогового окна
