Update kурсовая Малыгин 414.md

--- a/Malygin/.ру/kурсовая Малыгин 414.md
+++ b/Malygin/.ру/kурсовая Малыгин 414.md
@@ -180,7 +180,7 @@
     <li><strong>Данные о сотрудниках:</strong> ФИО, должность, телефон, email, дата найма, зарплата</li>
     <li><strong>Данные о продажах:</strong> дата, клиент, продавец, список товаров, общая сумма</li>
     <li><strong>Данные о поставках:</strong> дата, поставщик, список товаров, общая сумма</li>
-    <li><strong>Данные о категориях товаров:</strong> гитары, струны, медиаторы, чехлы, усилители</li>
+    <li><strong>Данные о категориях товаров:</strong> все, акустические гитары, струны, медиаторы, чехлы, укулеле,электрогитары,бас-гитары, </li>
 </ul>
 
 <h3 id="13-перечень-выходных-данных">1.3. Перечень выходных данных</h3>
@@ -188,7 +188,6 @@
 <ul>
     <li>Отчеты по продажам за период (ежедневные, еженедельные, месячные)</li>
     <li>Отчеты по остаткам товаров на складе</li>
-    <li>Отчеты по популярности брендов и моделей гитар</li>
     <li>Финансовые отчеты (выручка, прибыль, затраты)</li>
     <li>История заказов клиентов</li>
     <li>Рейтинг продавцов по объему продаж</li>
@@ -199,12 +198,12 @@
 
 <ul>
     <li>Один поставщик может поставлять несколько моделей гитар</li>
-    <li>Гитара может иметь только одного производителя</li>
+    <li>Гитара может иметь только 1 производителя</li>
     <li>Продажа может содержать несколько товаров (гитара + аксессуары)</li>
     <li>Клиент может совершать несколько покупок</li>
     <li>Сотрудник может обслуживать несколько продаж</li>
-    <li>Цена гитары не может быть отрицательной</li>
-    <li>Количество товара на складе не может быть отрицательным</li>
+    <li>Цена гитары не может быть -<0-/li>
+    <li>Количество товара на складе не может быть равно (-)</li>
 </ul>
 
 <h3 id="15-взаимодействие-с-другими-программами">1.5. Взаимодействие с другими программами</h3>
@@ -310,8 +309,8 @@ ER-диаграмма:
 │ страна          │      │ описание        │
 │ год_основания   │      └─────────────────┘
 └────────┬────────┘               │
-         │ 1                       │ 1
-         │ N                       │ N
+         │ 1                      │ 1
+         │ N                      │ N
 ┌────────▼────────┐      ┌────────▼────────┐
 │     Гитара      │      │   Поставщик     │
 ├─────────────────┤      ├─────────────────┤
