--- a/Elesov/ЕлесовКурсоваяработа414группа.md
+++ b/Elesov/ЕлесовКурсоваяработа414группа.md
@@ -38,6 +38,7 @@
 [-Безопасность](#Безопасность)  
 [-Разработка стратегии резервного копирования](#Разработка-стратегии-резервного-копирования)  
 [-Заключение](#Заключение)  
+[-Список литературы](#Список-литературы)   
 [-Приложение](#Приложение)
 
 # <p align="center">**Введение**
