--- a/Elesov/ЕлесовКурсоваяработа414группа.md
+++ b/Elesov/ЕлесовКурсоваяработа414группа.md
@@ -321,8 +321,8 @@ schedule_of_cleaning_rooms:
 ```
 **Создание процедур:**
 ```sql  
-    • create or replace procedure extension(client_id integer, new_date date) as $$ begin update reservation set date_of_checkout=new_date where client=client_id; end; $$ language plpgsql; -- процедура, обновляющая дату выселения  
-    • create or replace procedure checkin(date_checkin date, date_checkout date, client_id integer, admin integer, bed integer, number_of_nights integer) as $$ declare t_price real; b_price real; begin select price_per_night into b_price from beds where id = bed; t_price := b_price * number_of_nights; insert into reservation values(date_checkin, date_checkout, client_id, admin, bed,  number_of_nights, t_price); end; $$ language plpgsql; -- процедура заселения 
+create or replace procedure extension(client_id integer, new_date date, current_bed integer) as $$ begin update reservation set date_of_checkout=new_date where client=client_id and bed=current_bed; end; $$ language plpgsql; -- процедура, обновляющая дату выселения  
+create or replace procedure checkin(date_checkin date, date_checkout date, client_id integer, admin integer, bed integer, number_of_nights integer) as $$ declare t_price real; b_price real; begin select price_per_night into b_price from beds where id = bed; t_price := b_price * number_of_nights; insert into reservation values(date_checkin, date_checkout, client_id, admin, bed,  number_of_nights, t_price); end; $$ language plpgsql; -- процедура заселения 
 ``` 
 
 ##### Разработка пользовательского интерфейса
