--- a/Malygin/.ру/kурсовая Малыгин 414.md
+++ b/Malygin/.ру/kурсовая Малыгин 414.md
@@ -825,7 +825,8 @@ def get_sales_report():
 <br>
 
 <h2 id="приложение-б">Приложение Б</h2>
-<h3>Реализация программы, сам код интерфейса моего приложения -БД Торговой Организациии-(Проект написан на  практическом примере представления магазина гитар.)</h3>
+<h3>Реализация программы, сам код интерфейса моего приложения БД Торговой Организациии.
+  (Проект написан на  практическом примере представления Guitar shop.)</h3>
 
 
 
