Update kурсовая Малыгин 414.md

--- a/Malygin/.ру/kурсовая Малыгин 414.md
+++ b/Malygin/.ру/kурсовая Малыгин 414.md
@@ -826,7 +826,8 @@ def get_sales_report():
 
 <h2 id="приложение-б">Приложение Б</h2>
 
-<h3>Реализация программы, сам код интерфейса моего приложения БД Торговой Организациии.
+<h3>Реализация программы.
+  Сам код интерфейса моего приложения, БД Торговой Организациии.
  
   
   (Проект написан на  практическом примере представления Guitar shop.)</h3>
