--- a/Malygin/.ру/kурсовая Малыгин 414.md
+++ b/Malygin/.ру/kурсовая Малыгин 414.md
@@ -45,34 +45,35 @@
 <h2>Содержание</h2>
 
 <ul>
-  <li><a href="#введение">Введение</a></li>
+  <li><a href="#Введение">Введение</a></li>
   <li>
-<a href="#1-анализ-предметной-области-постановка-задачи">
+<a href="#Глава1.
+  Анализ-предметной-области-постановка-задачи">
       1. Анализ предметной области. Постановка задачи
     </a>
     <ul>
       <li>
-        <a href="#11-описание-предметной-области-и-функции-решаемых-задач">
+        <a href="#11-Описание-предметной-области-и-функции-решаемых-задач">
           1.1. Описание предметной области и функции решаемых задач
         </a>
       </li>
       <li>
-        <a href="#12-перечень-входных-данных">
+        <a href="#12-Перечень-входных-данных">
           1.2. Перечень входных данных
         </a>
       </li>
       <li>
-        <a href="#13-перечень-выходных-данных">
+        <a href="#13-Перечень-выходных-данных">
           1.3. Перечень выходных данных
         </a>
       </li>
       <li>
-        <a href="#14-ограничения-предметной-области-если-таковые-имеются">
+        <a href="#14-Ограничения-предметной-области-если-таковые-имеются">
           1.4. Ограничения предметной области (если таковые имеются)
         </a>
       </li>
       <li>
-        <a href="#15-взаимодействие-с-другими-программами">
+        <a href="#15-Взаимодействие-с-другими-программами">
           1.5. Взаимодействие с другими программами
         </a>
       </li>
@@ -80,56 +81,60 @@
   </li>
 
   <li>
-    <a href="#2-инфологическая-концептуальная-модель-базы-данных">
+    <a href="#Глава2.
+      Инфологическая-концептуальная-модель-базы-данных">
       2. Инфологическая (концептуальная) модель базы данных
     </a>
     <ul>
       <li>
-        <a href="#21-выделение-информационных-объектов">
+        <a href="#21-Выделение-информационных-объектов">
           2.1. Выделение информационных объектов
         </a>
       </li>
       <li>
-        <a href="#22-определение-атрибутов-объектов">
+        <a href="#22-Определение-атрибутов-объектов">
           2.2. Определение атрибутов объектов
         </a>
       </li>
       <li>
-        <a href="#23-определение-отношений-и-мощности-отношений-между-объектами">
+        <a href="#23-Определение-отношений-и-мощности-отношений-между-объектами">
           2.3. Определение отношений и мощности отношений между объектами
         </a>
       </li>
       <li>
-        <a href="#24-построение-концептуальной-модели">
+        <a href="#24-Построение-концептуальной-модели">
           2.4. Построение концептуальной модели
         </a>
       </li>
     </ul>
   </li>
 
-  <li><a href="#3-логическая-структура-бд">3. Логическая структура БД</a></li>
-  <li><a href="#4-физическая-структура-базы-данных">4. Физическая структура базы данных</a></li>
+  <li><a href="#Глава3.
+        Логическая-структура-бд">3. Логическая структура БД</a></li>
+  <li><a href="#Глава4
+        Физическая-структура-базы-данных">4. Физическая структура базы данных</a></li>
 
   <li>
-    <a href="#5-реализация-проекта-в-среде-конкретной-субд">
+    <a href="#Глава5.
+      Реализация-проекта-в-среде-конкретной-субд">
       5. Реализация проекта в среде конкретной СУБД
     </a>
     <ul>
-      <li><a href="#51-создание-таблиц">5.1. Создание таблиц</a></li>
-      <li><a href="#52-создание-запросов">5.2. Создание запросов</a></li>
-      <li><a href="#53-разработка-интерфейса">5.3. Разработка интерфейса</a></li>
-      <li><a href="#54-назначение-прав-доступа">5.4. Назначение прав доступа</a></li>
-      <li><a href="#55-создание-индексов">5.5. Создание индексов</a></li>
+      <li><a href="#51-Создание-таблиц">5.1. Создание таблиц</a></li>
+      <li><a href="#52-Создание-запросов">5.2. Создание запросов</a></li>
+      <li><a href="#53-Разработка-интерфейса">5.3. Разработка интерфейса</a></li>
+      <li><a href="#54-Назначение-прав-доступа">5.4. Назначение прав доступа</a></li>
+      <li><a href="#55-Создание-индексов">5.5. Создание индексов</a></li>
       <li>
-        <a href="#56-разработка-стратегии-резервного-копирования-базы-данных">
+        <a href="#56-Разработка-стратегии-резервного-копирования-базы-данных">
           5.6. Разработка стратегии резервного копирования базы данных
         </a>
       </li>
     </ul>
   </li>
 
-  <li><a href="#заключение">Заключение</a></li>
-  <li><a href="#список-использованных-источников">Список использованных источников</a></li>
+  <li><a href="#Заключение">Заключение</a></li>
+  <li><a href="#Список-использованных-источников">Список использованных источников</a></li>
 </ul>
 
 ---
